--- a/style.css
+++ b/style.css
@@ -422,7 +422,7 @@ html {
   
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
   
   body{
     overflow: hidden;
