--- a/style.css
+++ b/style.css
@@ -517,6 +517,6 @@ html {
 @media screen and (max-width:330px){
   .header-main{
     padding-top: 350px;
-      bacground-color: black;
+      background-color: black;
   }
 }
