--- a/style.css
+++ b/style.css
@@ -516,7 +516,7 @@ html {
 
 @media screen and (max-width:330px){
   .header-main{
-    padding-top: 320px;
+    padding: 320px 0;
     font-size: 10pt;
   }
 }
