--- a/style.css
+++ b/style.css
@@ -6,8 +6,6 @@
 
 body{
   font-family: sans-serif;
-  background: rgb(254,227,169);
-  background: linear-gradient( rgba(254,227,169,1) 0%, rgba(218,212,195,1) 65%, rgba(249,249,249,1) 85%); 
 }
 
 header{
@@ -23,13 +21,17 @@ main .desc-title p{
 .header-nav {
     display: flex;
     align-items: center;
-    padding: 25px 0;
+    padding: 20px 0;
     justify-content: space-between;
-    background-color: #FFAE00;
+    background-color: rgb(27, 27, 27);
     width: 100%;
     color: white;
     position: fixed;
-    opacity: 0.8;
+    opacity: 1;
+}
+
+.header-nav h1{
+  padding-left: 25px;
 }
 
 nav{
@@ -43,7 +45,7 @@ nav .nav {
 
 .btn-nav a{
   max-width: 200px;
-  background-color: black;
+  background-color: #FFAE00;
   padding: 12px 14px;
   border-radius: 8px;
 }
@@ -64,9 +66,11 @@ a {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    height: 90%;
     font-size: 1.5em;
-    padding: 0 100px;
+    padding: 170px 100px;
+    background-image: url('Vector 1.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header-main p{
@@ -100,7 +104,7 @@ a {
 }
 
 .btn a{
-    background-color: #FFAE00;
+    background-color: lightseagreen;
     width: 200px;
     padding: 14px 7px;
     border-radius: 8px;
@@ -119,6 +123,7 @@ a {
     margin-top:70px ;
     text-align: center;
     width: 100%;
+    padding: 100px 0;
 }
 
 .section-1 .article{
@@ -128,7 +133,6 @@ a {
     justify-content: space-around;
     width: 100%;
     padding: 100px 0;
-
 }
 
 .section-1 .item{
@@ -304,12 +308,12 @@ a {
 
   footer a{
     display: inline-block;
-    color: #FFf;
+    color: rgb(49, 49, 49);
     margin-right: 2px;
     font-size: 1.5em;
     height: 50px;
     width: 50px;
-    background-color: blue;
+    background-color: lightseagreen;
     text-align: center;
     line-height: 50px;
     border-radius: 50px;
@@ -369,7 +373,7 @@ html {
   }
 
   .header-main{
-    padding: 300px 45px;
+    padding: 170px 0 100px 45px;
     font-size: 1em;
   }
 
@@ -394,6 +398,10 @@ html {
   /* Main */
   main h1{
     font-size: 1.8em;
+  }
+
+  .section-1{
+    padding: 0 0;
   }
 
   .desc-title p{
@@ -429,7 +437,7 @@ html {
   }
   .header-nav{
     opacity: 1;
-    padding: 20px 10px;
+    padding: 20px 15px;
   }
 
 
@@ -439,8 +447,9 @@ html {
   }
 
   .header-main{
-    padding: 250px 45px;
+    padding: 120px 0 50px 45px;
     font-size: 1em;
+    background-color: #FFAE00;
   }
 
   .header-main p{
@@ -452,10 +461,13 @@ html {
     flex-direction: column;
   }
 
+  .bullet{
+    display: none;
+  }
   .btn a{
-    width: 100%;
+    width: 400px;
     margin-bottom: 15px;
-    padding: 14px 7px;
+    padding: 14px 0;
     text-align: center;
 }
 
@@ -474,6 +486,10 @@ html {
   .desc-title p{
     font-size: 1em;
     padding: 0 45px;
+  }
+
+  .section-1 {
+    padding: 50px 0;
   }
 
   .section-1 .article{
@@ -515,16 +531,46 @@ html {
 }
 
 @media screen and (max-width:330px){
-  .header-main{
-    padding-top: 300px;
-    font-size: 10pt;
+  
+
+  .header-main p{
+    font-size: 12pt;
+  }
+
+  .header-main span{
+    font-weight: lighter;
+    color: #fff;
+  }
+
+  .header-main {
+    padding: 150px 20px 100px 20px;
+    text-align: center;
   }
 
   .header-nav{
     padding:  15px;
+    background-color: #FFf;
+    color: rgb(49, 49, 49);
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 4px 0px;
+  }
+
+  .header-main .btn a{
+    width: 200px;
+  }
+
+  .header-nav h1{
+    padding-left: 0;
+  }
+
+  .burger div {
+    background-color: rgb(49, 49, 49);
   }
 
   .flex-card {
     margin-left: -50px;
+  }
+
+  .section-3 input{
+    width: 300px;
   }
 }
