--- a/style.css
+++ b/style.css
@@ -609,5 +609,8 @@ html {
     color: rgb(49, 49, 49);
     box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 4px 0px;
   }
+    .section-3 input{
+    width: 300px;
+  }
 }
 
